--- a/src.v1/vcf_anc_formatter/makefile
+++ b/src.v1/vcf_anc_formatter/makefile
@@ -1,10 +1,11 @@
 
 #CC=gcc -W -Wall -Werror -g #-std=c99
 CC=gcc -W -g
-
-htstag=/home/yzhou3/fast/tools/pub/htslib/build/lib/libhts.so
+HTSLIBDIR=/homes8/yingzhou/Tools/pub/htslib/htslib-1.17.install/lib
+HTSINCDIR=/homes8/yingzhou/Tools/pub/htslib/htslib-1.17.install/include
+LINKPATH= -I${HTSINCDIR} -L${HTSLIBDIR} -lhts
 
 all: vcf_anc_formatter
 
-vcf_anc_formatter: extractAncestry.v2.c ${htstag}
-	${CC} -o $@ $^
+vcf_anc_formatter: extractAncestry.v2.c
+	${CC} -o $@ $(LINKPATH) $^
