--- a/src.v1/vcf_anc_formatter/makefile
+++ b/src.v1/vcf_anc_formatter/makefile
@@ -1,8 +1,8 @@
 
 #CC=gcc -W -Wall -Werror -g #-std=c99
 CC=gcc -W -g
-HTSLIBDIR=/homes8/yingzhou/Tools/pub/htslib/htslib-1.17.install/lib
-HTSINCDIR=/homes8/yingzhou/Tools/pub/htslib/htslib-1.17.install/include
+HTSLIBDIR=/homes8/yingzhou/Tools/pub/htslib/htslib-1.19.1-install/lib
+HTSINCDIR=/homes8/yingzhou/Tools/pub/htslib/htslib-1.19.1-install/include
 LINKPATH= -I${HTSINCDIR} -L${HTSLIBDIR} -lhts -DHTSLIB
 
 all: vcf_anc_formatter
